tests/errors/sign_01.f90
program main
    print *, sign(1, 1_8)
end program